Fix evolucion section report
Former-commit-id: c2ad10a8e33ba0a0bb85fe6251570935caa7b801

--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -2635,7 +2635,7 @@ observatory.graphic.evolution.aspect.mid.puntuation.name                      = 
 observatory.graphic.evolution.aspect.mid.puntuation.title                     = Development of the score in terms of appearance
 observatory.graphic.evolution.mid.puntuation                                  = Evolution of the Centre?s Average Score
 observatory.graphic.evolution.mid.puntuation.name                             = BolyacionMediaObservatory
-observatory.graphic.evolution.mid.puntuation.title.fixed                      = Evolution of the average score of the observatory: in fixed terms
+observatory.graphic.evolution.mid.puntuation.title.fixed                      = Evolution of the average score of the observatory: fixed part
 observatory.graphic.evolution.mid.puntuation.title.general                    = Evolution of the average score of the observatory: in general terms
 observatory.graphic.evolution.verification.mid.puntuation                     = Evolution of the average score. Verification {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = CountriacionMediaVerificioV {0}
@@ -3052,34 +3052,44 @@ rastreo.realizado.busqueda.semilla      = Seed
 
 remove = Remove
 
-report.config.etiquetas.filter.info                = Label filtering is applied as an inclusive query. <br/>For example, if the labels <em>ETIQUETA_1</em> and <em>ETIQUETA_2</em> are indicated, the results of the seeds associated with ETIQUETA_1 <mark>or</mark> ETIQUETA_2 (or both) will be selected.
-report.config.etiquetas.filter.title               = Filter by tags
-report.config.graficas.filter.info                 = Select the optional graphics to include in the observatory
-report.config.graficas.filter.title                = Optional graphics to include\n
-report.config.observatorios.filter.title           = Observatories to include in the evolutionary
-report.config.observatorios.filter.title.global    = Observatories to include in the report
-report.config.optional.1                           = Overall results. Verification mode
-report.config.optional.2                           = Overall results. Average score by aspect
-report.config.optional.3                           = Results by segment. Average score of the checks
-report.config.optional.4                           = Results by segment. Verification mode
-report.config.optional.5                           = Results by segment. Average score by aspect
-report.config.optional.6                           = Evolution in General Terms and in Fixed Part. Average score by aspects
-report.config.optional.7                           = Evolution by segments. Compliance by verification
-report.config.plantillas.filter.base               = Base template
-report.config.plantillas.filter.complejidades      = Complexities section template
-report.config.plantillas.filter.complejidades.info = For this template to work, the selected base template must have <strong>a marker called <em>complexitysection</em></strong> in the position of the document where you want to add this section. Otherwise <u>cannot be inserted in the base document</u>. \n<br/><a title="Insert a bookmark in LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/en" target="_blank"> Insert a bookmark in LibreOffice</span></a>
-report.config.plantillas.filter.segmentos          = Segment section template
-report.config.plantillas.filter.segmentos.info     = For this template to work, the selected base template must have <strong>a marker called <em>categorysection</em></strong> in the position of the document where you want to add this section. Otherwise <u>cannot be inserted in the base document</u>. \n<br/> <a title="Insert a bookmark in LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/en" target="_blank"> Insert a bookmark in LibreOffice</span></a>
-report.config.plantillas.filter.title              = Templates to use to generate the report
-report.config.tags.title                           = Tags
-report.config.title                                = Configure aggregate report
-report.config.title.default                        = Web accessibility observatory report
-report.config.title.label                          = Document title generated
-report.config.title.title                          = Report title
-report.evolution.allocation.graphic.title.fixed    = Evolution of the estimated adequacy level: in fixed terms
-report.evolution.allocation.graphic.title.global   = Evolution of the estimated adequacy level: in general terms
-report.evolution.compliance.graphic.title.fixed    = Evolution of the estimated compliance situation: in fixed terms
-report.evolution.compliance.graphic.title.global   = Evolution of the estimated compliance status: in general terms
+report.config.etiquetas.filter.info                 = Label filtering is applied as an inclusive query. <br/>For example, if the labels <em>ETIQUETA_1</em> and <em>ETIQUETA_2</em> are indicated, the results of the seeds associated with ETIQUETA_1 <mark>or</mark> ETIQUETA_2 (or both) will be selected.
+report.config.etiquetas.filter.title                = Filter by tags
+report.config.graficas.filter.info                  = Select the optional graphics to include in the observatory
+report.config.graficas.filter.title                 = Optional graphics to include\n
+report.config.observatorios.filter.title            = Observatories to include in the evolutionary
+report.config.observatorios.filter.title.global     = Observatories to include in the report
+report.config.optional.1                            = Overall results. Verification mode
+report.config.optional.2                            = Overall results. Average score by aspect
+report.config.optional.3                            = Results by segment. Average score of the checks
+report.config.optional.4                            = Results by segment. Verification mode
+report.config.optional.5                            = Results by segment. Average score by aspect
+report.config.optional.6                            = Evolution in General Terms and in Fixed Part. Average score by aspects
+report.config.optional.7                            = Evolution by segments. Compliance by verification
+report.config.plantillas.filter.base                = Base template
+report.config.plantillas.filter.complejidades       = Complexities section template
+report.config.plantillas.filter.complejidades.info  = For this template to work, the selected base template must have <strong>a marker called <em>complexitysection</em></strong> in the position of the document where you want to add this section. Otherwise <u>cannot be inserted in the base document</u>. \n<br/><a title="Insert a bookmark in LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/en" target="_blank"> Insert a bookmark in LibreOffice</span></a>
+report.config.plantillas.filter.segmentos           = Segment section template
+report.config.plantillas.filter.segmentos.info      = For this template to work, the selected base template must have <strong>a marker called <em>categorysection</em></strong> in the position of the document where you want to add this section. Otherwise <u>cannot be inserted in the base document</u>. \n<br/> <a title="Insert a bookmark in LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/en" target="_blank"> Insert a bookmark in LibreOffice</span></a>
+report.config.plantillas.filter.title               = Templates to use to generate the report
+report.config.tags.title                            = Tags
+report.config.title                                 = Configure aggregate report
+report.config.title.default                         = Web accessibility observatory report
+report.config.title.label                           = Document title generated
+report.config.title.title                           = Report title
+report.evolution.allocation.graphic.title.fixed     = Evolution of the estimated adequacy level: fixed part
+report.evolution.allocation.graphic.title.global    = Evolution of the estimated adequacy level: in general terms
+report.evolution.compliance.graphic.title.fixed     = Evolution of the estimated compliance situation: fixed part
+report.evolution.compliance.graphic.title.global    = Evolution of the estimated compliance status: in general terms
+report.evolution.conformance.verification.a.fixed   = Evolution of the conformity of the verifications: fixed part Suitability level A
+report.evolution.conformance.verification.a.global  = Evolution of verification conformity: in general terms Suitability level A
+report.evolution.conformance.verification.aa.fixed  = Evolution of the conformity of the verifications: fixed part Suitability level AA
+report.evolution.conformance.verification.aa.global = Evolution of verification conformity: in general terms Suitability level AA
+report.evolution.score.aspect.fixed                 = Evolution of the average score by aspects: fixed part
+report.evolution.score.aspect.global                = Evolution of the average score by aspects: in general terms
+report.evolution.score.verifications.a.fixed        = Evolution of the average score of the checks: fixed part. Suitability level A
+report.evolution.score.verifications.a.global       = Evolution of the average score of the verifications: in general terms. Suitability level A
+report.evolution.score.verifications.aa.fixed       = Evolution of the average score of the checks: fixed part. Suitability level AA
+report.evolution.score.verifications.aa.global      = Evolution of the average score of the verifications: in general terms. Suitability level AA
 
 resultado.observatorio.activo.alt                                = Active
 resultado.observatorio.detalle.semilla.rastreo.title             = Breakdown of seed
