--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2456,6 +2456,7 @@ observatory.graphic.evolution.aspect.mid.puntuation.name                     = E
 observatory.graphic.evolution.aspect.mid.puntuation.title                    = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Aspecto
 observatory.graphic.evolution.mid.puntuation                                 = Evoluci\u00F3n de la Puntuaci\u00F3n Media del Observatorio
 observatory.graphic.evolution.mid.puntuation.name                            = EvolucionPuntuacionMediaObservatorio
+observatory.graphic.evolution.mid.puntuation.title.fixed                     = Evoluci\u00F3n de la Puntuaci\u00F3n media del observatorio: parte fija
 observatory.graphic.evolution.verification.mid.puntuation                    = Evoluci\u00F3n de la Puntuaci\u00F3n Media por Verificaci\u00F3n. Verificaci\u00F3n {0}
 observatory.graphic.evolution.verification.mid.puntuation.name               = EvolucionPuntuacionMediaVerificacionV{0}
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name = ComparacionPuntuacionComplejidad
@@ -2736,11 +2737,24 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
-report.config.observatorios.filter.title        = Observatorios para incluir en el evolutivo 
-report.config.observatorios.filter.title.global = Observatorios para incluir en el informe 
-report.config.title                             = T\u00EDtulo del informe
-report.config.title.default                     = Informe de observatorio de accesibilidad web
-report.config.title.label                       = T\u00EDtulo del documento generado
+report.config.observatorios.filter.title            = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global     = Observatorios para incluir en el informe 
+report.config.title                                 = T\u00EDtulo del informe
+report.config.title.default                         = Informe de observatorio de accesibilidad web
+report.config.title.label                           = T\u00EDtulo del documento generado
+report.evolution.allocation.graphic.title.fixed     = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
+report.evolution.compliance.graphic.title.fixed     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimento estimado: parte fija
+report.evolution.compliance.graphic.title.global    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
+report.evolution.conformance.verification.a.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.a.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.aa.fixed  = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.conformance.verification.aa.global = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
+report.evolution.score.aspect.fixed                 = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: parte fija
+report.evolution.score.aspect.global                = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: en t\u00E9rminos generales
+report.evolution.score.verifications.a.fixed        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.a.global       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.aa.fixed       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.score.verifications.aa.global      = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
