--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -3079,7 +3079,7 @@ report.config.title.title                           = Report title
 report.evolution.allocation.graphic.title.fixed     = Evolution of the estimated adequacy level: fixed part
 report.evolution.allocation.graphic.title.global    = Evolution of the estimated adequacy level: in general terms
 report.evolution.compliance.graphic.title.fixed     = Evolution of the estimated compliance situation: fixed part
-report.evolution.compliance.graphic.title.global    = Evolution of the estimated compliance status: in general terms
+report.evolution.compliance.graphic.title.global    = Evolution of the estimated compliance situation: in general terms
 report.evolution.conformance.verification.a.fixed   = Evolution of the conformity of the verifications: fixed part Suitability level A
 report.evolution.conformance.verification.a.global  = Evolution of verification conformity: in general terms Suitability level A
 report.evolution.conformance.verification.aa.fixed  = Evolution of the conformity of the verifications: fixed part Suitability level AA
