--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -2391,7 +2391,7 @@ observatorio.duplicada                                          = Observatorio y
 observatorio.nivel.adecuacion                                   = Nivel de Cumplimiento Estimado
 observatorio.nivel.analisis.1                                   = A
 observatorio.nivel.analisis.2                                   = AA
-observatorio.nivel.cumplimiento                                 = Situaci\u00F3n de cumplimiento estimado
+observatorio.nivel.cumplimiento                                 = Situaci\u00F3n de cumplimiento estimada
 observatorio.nivel.cumplimiento.media.verificacion.p1           = A continuaci\u00F3n se presentan a nivel de sitio web la puntuaci\u00F3n media de cada verificaci\u00F3n agregando los resultados de todas las p\u00E1ginas analizadas, en primer lugar para las verificaciones de nivel de adecuaci\u00F3n A y a continuaci\u00F3n para las verificaciones de nivel de adecuaci\u00F3n AA. Adem\u00E1s de mostrar la situaci\u00F3n actual, tambi\u00E9n se indica la evoluci\u00F3n respecto de la iteraci\u00F3n anterior.
 observatorio.nivel.cumplimiento.media.verificacion.p2           = El eje X de las gr\u00E1ficas representa cada una de las verificaciones analizadas en un nivel de adecuaci\u00F3n, y el eje Y presenta la Puntuaci\u00F3n Media de Verificaci\u00F3n (PMV) obtenida agregando los resultados de todas las p\u00E1ginas analizadas. Aquellas verificaciones con una puntuaci\u00F3n m\u00E1s baja son las que presentan mayores problemas de accesibilidad y sobre las cu\u00E1les habr\u00E1 que concentran los esfuerzos de mejora. Los valores "NP - No punt\u00FAa" indican que no hay ning\u00FAn elemento de ese tipo analizable en la muestra y por lo tanto no suponen problemas de accesibilidad
 observatorio.nivel.cumplimiento.media.verificacion.pagina.p1    = Se muestra a continuaci\u00F3n de forma esquem\u00E1tica el resultado obtenido en el an\u00E1lisis individual de cada p\u00E1gina, indicando la Puntuaci\u00F3n Media de P\u00E1gina (PMP) y el grado de adecuaci\u00F3n en cada caso
@@ -2438,6 +2438,9 @@ observatory.graphic.accessibility.level.allocation.segment.name              = D
 observatory.graphic.accessibility.level.allocation.segment.title             = Nivel de adecuaci\u00F3n estimado: {0}
 observatory.graphic.accessibility.level.allocation.title                     = Distribuci\u00F3n del Nivel de accesibilidad global
 observatory.graphic.accessibility.level.compilance.segment.name              = DistribucionNivelCumplimientoS{0}
+observatory.graphic.accessibility.level.compilance.segment.title             = Situaci\u00F3n de cumplimiento estimada: segmento {0}
+observatory.graphic.accessibility.level.evol.allocation.segment.name         = EvolDistribucionNivelAccesibilidadS{0}
+observatory.graphic.accessibility.level.evol.compilance.segment.name         = EvolDistribucionNivelCumplimientoS{0}
 observatory.graphic.aspect.mid.name                                          = ComparacionMediasAspectos
 observatory.graphic.aspect.mid.title                                         = Comparaci\u00F3n de Medias orientadas a Aspectos
 observatory.graphic.aspects                                                  = Aspectos
@@ -2738,24 +2741,36 @@ rastreo.realizado.busqueda.fecha.fin    = Fecha Fin
 rastreo.realizado.busqueda.fecha.inicio = Fecha Inicio
 rastreo.realizado.busqueda.semilla      = Semilla 
 
-report.config.observatorios.filter.title            = Observatorios para incluir en el evolutivo 
-report.config.observatorios.filter.title.global     = Observatorios para incluir en el informe 
-report.config.title                                 = T\u00EDtulo del informe
-report.config.title.default                         = Informe de observatorio de accesibilidad web
-report.config.title.label                           = T\u00EDtulo del documento generado
-report.evolution.allocation.graphic.title.fixed     = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
-report.evolution.compliance.graphic.title.fixed     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: parte fija
-report.evolution.compliance.graphic.title.global    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
-report.evolution.conformance.verification.a.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
-report.evolution.conformance.verification.a.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
-report.evolution.conformance.verification.aa.fixed  = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
-report.evolution.conformance.verification.aa.global = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
-report.evolution.score.aspect.fixed                 = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: parte fija
-report.evolution.score.aspect.global                = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: en t\u00E9rminos generales
-report.evolution.score.verifications.a.fixed        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
-report.evolution.score.verifications.a.global       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
-report.evolution.score.verifications.aa.fixed       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
-report.evolution.score.verifications.aa.global      = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
+report.config.observatorios.filter.title             = Observatorios para incluir en el evolutivo 
+report.config.observatorios.filter.title.global      = Observatorios para incluir en el informe 
+report.config.plantillas.filter.base                 = Plantilla base
+report.config.plantillas.filter.complejidades        = Plantilla de la secci\u00F3n de complejidades
+report.config.plantillas.filter.complejidades.info   = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>complexitysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.evol.segmentos       = Plantilla de la secci\u00F3n de evoluci\u00F3n por segmentos
+report.config.plantillas.filter.evol.segmentos.info  = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>segmentevolutionsection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. \n<br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.segmentos            = Plantilla de la secci\u00F3n de segmentos
+report.config.plantillas.filter.segmentos.info       = Para que esta plantilla funcione, la plantilla base seleccionada tiene que tener <strong>obligatoriamente un marcador llamado <em>categorysection</em></strong> en la posici\u00F3n del doumento donnde se quiera a\u00F1adir esta secci\u00F3n. En caso contrario <u>no podr\u00E1 ser insertado en el documento base</u>. <br/><a  title="Insertar un marcador en LibreOffice" href="https://help.libreoffice.org/Writer/Insert_Bookmark/es" target="_blank">Insertar un marcador en LibreOffice</span></a>
+report.config.plantillas.filter.title                = Plantillas a usar para generar el informe
+report.config.title                                  = T\u00EDtulo del informe
+report.config.title.default                          = Informe de observatorio de accesibilidad web
+report.config.title.label                            = T\u00EDtulo del documento generado
+report.evolution.allocation.graphic.title.fixed      = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: parte fija
+report.evolution.allocation.graphic.title.segment    = Evoluci\u00F3n del Nivel de adecuaci\u00F3n estimado: segmento {0}
+report.evolution.compliance.graphic.title.fixed      = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: parte fija
+report.evolution.compliance.graphic.title.global     = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: en t\u00E9rminos generales
+report.evolution.compliance.graphic.title.segment    = Evoluci\u00F3n de la Situaci\u00F3n de cumplimiento estimada: segmento {0}
+report.evolution.conformance.verification.a.fixed    = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.a.global   = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.a.segment  = Evoluci\u00F3n de la conformidad de las verificaciones: segmento {0}. Nivel de adecuaci\u00F3n A
+report.evolution.conformance.verification.aa.fixed   = Evoluci\u00F3n de la conformidad de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.conformance.verification.aa.global  = Evoluci\u00F3n de la conformidad de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
+report.evolution.conformance.verification.aa.segment = Evoluci\u00F3n de la conformidad de las verificaciones: segmento {0}. Nivel de adecuaci\u00F3n AA
+report.evolution.score.aspect.fixed                  = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: parte fija
+report.evolution.score.aspect.global                 = Evoluci\u00F3n de la Puntuaci\u00F3n media por aspectos: en t\u00E9rminos generales
+report.evolution.score.verifications.a.fixed         = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.a.global        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n A
+report.evolution.score.verifications.aa.fixed        = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: parte fija. Nivel de adecuaci\u00F3n AA
+report.evolution.score.verifications.aa.global       = Evoluci\u00F3n de la Puntuaci\u00F3n media de las verificaciones: en t\u00E9rminos generales. Nivel de adecuaci\u00F3n AA
 
 resultado.observatorio.activo.alt                                = Activo
 resultado.observatorio.detalle.semilla.rastreo.title             = Detalle de Semilla
