Global report new sections
Former-commit-id: 71b279878f8af5fa4892f13dfd00da6be97a43d5

--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -2641,6 +2641,10 @@ observatory.graphic.evolution.mid.puntuation.title.fixed                      = 
 observatory.graphic.evolution.mid.puntuation.title.general                    = Evolution of the average score of the observatory: in general terms
 observatory.graphic.evolution.verification.mid.puntuation                     = Evolution of the average score. Verification {0}
 observatory.graphic.evolution.verification.mid.puntuation.name                = CountriacionMediaVerificioV {0}
+observatory.graphic.global.puntuation.allocation.ambit.mark.name              = ComparacionAdecuacionAmbito
+observatory.graphic.global.puntuation.allocation.ambit.mark.title             = Estimated level of suitability by ambit
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.name      = ComparacionAdecuacionAmbitoPrincipales
+observatory.graphic.global.puntuation.allocation.ambit.primary.mark.title     = Estimated suitability level of the main websites by area
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.name  = ComparacionPuntuacionComplejidad
 observatory.graphic.global.puntuation.allocation.complexitiviy.strached.title = Average score of websites by complexity and level of appropriateness
 observatory.graphic.global.puntuation.allocation.complexity.mark.name         = ComparacionAdecuacionComplejidad
@@ -2649,10 +2653,14 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Comparison of the score by Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Comparison of performance by Segmento
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Estimated compliance status by complexity
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
 observatory.graphic.global.puntuation.compilance.segments.mark.title          = Estimated compliance status by segment
+observatory.graphic.global.puntuation.compliance.ambit.mark.title             = Estimated compliance status by area
+observatory.graphic.global.puntuation.compliance.ambit.primary.mark.title     = Estimated compliance status of main websites by area
 observatory.graphic.mark.allocation.complex.title                             = Average website score: complexity {0}
 observatory.graphic.mark.allocation.segment.name                              = DistribucionuncturesS {0}
 observatory.graphic.mark.allocation.segment.title                             = Distribution of scores: {0}
