Global report new sections
Update ODS to 35 results


Former-commit-id: 952e9509de45277de88144b76edf081fa2ce6d11

--- a/portal/src/main/resources/ApplicationResources_en_US.properties
+++ b/portal/src/main/resources/ApplicationResources_en_US.properties
@@ -752,6 +752,18 @@ gestion.semillas.observatorio               = Observatory seed management
 gestion.semillas.observatorio.titulo        = Observatory seed management
 gestion.terminos                            = Management of terms
 
+global.report.allocation.ambit.primary.table.title  = Nivel de adecuaci\u00F3n estimado (% de sitios web) de los sitios web principales por \u00E1mbito adminsitrativo
+global.report.allocation.ambit.table.title          = Nivel de adecuaci\u00F3n estimado (% de sitios web) por \u00E1mbito adminsitrativo
+global.report.allocation.complexitivity.table.title = Nivel de adecuaci\u00F3n estimado (% de sitios web) por complejidad
+global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
+global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
+global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
+global.report.criteria.table.title                  = N\u00FAmero de portales por criterio: {0}
+global.report.header.ambit                          = \u00C1mbito
+global.report.header.complexitivity                 = Complejidad
+global.report.header.num.sitios.web                 = N\u00FAmero de sitios web
+global.report.header.tags                           = Etiqueta
+
 grafica.sin.datos = No data available
 
 horas = hours
@@ -2653,8 +2665,8 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Comparison of the score by Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Comparison of performance by Segmento
-observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
-observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbitoPrincipales
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.title     = Estimated compliance status by complexity
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
