--- a/portal/src/main/resources/ApplicationResources_es_AC.properties
+++ b/portal/src/main/resources/ApplicationResources_es_AC.properties
@@ -661,6 +661,18 @@ gestion.semillas.observatorio               = Gesti\u00F3n de Semillas del Obser
 gestion.semillas.observatorio.titulo        = Gesti\u00F3n de Semillas del Observatorio
 gestion.terminos                            = Gesti\u00F3n de T\u00E9rminos
 
+global.report.allocation.ambit.primary.table.title  = Nivel de adecuaci\u00F3n estimado (% de sitios web) de los sitios web principales por \u00E1mbito adminsitrativo
+global.report.allocation.ambit.table.title          = Nivel de adecuaci\u00F3n estimado (% de sitios web) por \u00E1mbito adminsitrativo
+global.report.allocation.complexitivity.table.title = Nivel de adecuaci\u00F3n estimado (% de sitios web) por complejidad
+global.report.compliance.ambit.primary.table.title  = Situaci\u00F3n de cumplimiento estimada (% de sitios web) de los sitios web principales por \u00E1mbito administrativo
+global.report.compliance.ambit.table.title          = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por \u00E1mbito administrativo
+global.report.compliance.complexitivity.table.title = Situaci\u00F3n de cumplimiento estimada (% de sitios web) por complejidad
+global.report.criteria.table.title                  = N\u00FAmero de portales por criterio: {0}
+global.report.header.ambit                          = \u00C1mbito
+global.report.header.complexitivity                 = Complejidad
+global.report.header.num.sitios.web                 = N\u00FAmero de sitios web
+global.report.header.tags                           = Etiqueta
+
 grafica.sin.datos = No existen datos
 
 idioma.espanol     = Espa\u00F1ol
@@ -2475,8 +2487,8 @@ observatory.graphic.global.puntuation.allocation.segment.strached.name        = 
 observatory.graphic.global.puntuation.allocation.segment.strached.title       = Comparaci\u00F3n de Puntuaci\u00F3n por Segmento
 observatory.graphic.global.puntuation.allocation.segments.mark.name           = ComparacionAdecuacionSegmento
 observatory.graphic.global.puntuation.allocation.segments.mark.title          = Comparaci\u00F3n de Adecuaci\u00F3n por Segmento
-observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbitoPrincipales
-observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.mark.name              = ComparacionCumplimientoAmbito
+observatory.graphic.global.puntuation.compilance.ambit.primary.mark.name      = ComparacionCumplimientoAmbitoPrincipales
 observatory.graphic.global.puntuation.compilance.complexitiviy.mark.name      = ComparacionCumpliminetoComplejidad
 observatory.graphic.global.puntuation.compilance.segments.mark.name           = ComparacionCumpliminetoSegmento
 observatory.graphic.global.puntuation.compliance.ambit.mark.title             = Situaci\u00F3n de cumplimiento estimada por \u00E1mbito
