Fix cookie invalid value
Fix in directory case sensitive

Update ODS template

Fix prooperties with break line end that not works in js


Former-commit-id: 89e53ed34793b3e09ebbfb0144d6b5afb9b90275

--- a/portal/src/main/resources/ApplicationResources_es_ES.properties
+++ b/portal/src/main/resources/ApplicationResources_es_ES.properties
@@ -385,7 +385,7 @@ colname.remove.permanently = Eliminar definitivamente
 colname.report             = Informe
 colname.report.type        = Tipo de informe
 colname.request.date       = Fecha de solicitud
-colname.results            = Resultados\n
+colname.results            = Resultados
 colname.scope              = \u00C1mbito
 colname.segment            = Segment
 colname.send.date          = Fecha de env\u00EDo
@@ -3391,7 +3391,7 @@ sobreescribir.archivo.info  = <b>El archivo
 sobreescribir.archivo.info2 = ya existe. \u00BFDesea sobreescribirlo?</b>
 sobreescribir.archivo.title = Sobreescribir Archivo
 
-status.error        = Error\n
+status.error        = Error
 status.finished     = Finalizado
 status.launched     = Lanzado
 status.not.crawled  = No analizado
