WCAG EM Tool fixes and update logo and footer

--- a/wcagemtool/app/locale/EN/audit.json
+++ b/wcagemtool/app/locale/EN/audit.json
@@ -28,5 +28,6 @@
     "TESTED": "Tested",
     "TITLE": "Step 4: Audit the Selected Sample",
     "UNDERSTAND": "Understanding",
-    "UNTESTED": "{{critCount}} untested"
+    "UNTESTED": "{{critCount}} untested",
+    "LABEL_DESCR": "Description"
 }
