--- a/wcagemtool/app/locale/EN/common.json
+++ b/wcagemtool/app/locale/EN/common.json
@@ -10,5 +10,7 @@
     "CLICK_EXPAND": "Click to show section",
     "CLICK_COLLAPSE": "Click to hide section",
     "TO_TOP": "Back to top",
-    "ACTIVE": "Active"
+    "ACTIVE": "Active",
+    "FOOTER_OAW_COPYRIGHT": "Observatorio de Accesibilidad Web - Ministerio de Asuntos Económicos y Transformación Digital · Secretaría General de Administración Digital",
+    "FOOTER_OAW_BASED": "Based on <a href={{url1}}>report tool</a> of <a href={{url2}}>W3C</a> and <a href={{url3}}>WAI</a> initiative"
 }
